--- a/404.html
+++ b/404.html
@@ -45,7 +45,7 @@
 
     <title>404 Page not found</title>
 
-    <link rel="icon" href="https://gonewest818.github.io/favicon.png">
+    <link rel="icon" href="https://gonewest818.github.io/favicon.ico?v=1">
     
 
     
